[package]
name = "rust-on-k8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
jsonwebtoken = "9.3.0"
redis = "0.25.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.116"
sha256 = "1.5.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
